%% Moedah POS Database Schema
%% activity_logs.action_type includes PURCHASE_ORDER_DOCUMENT_GENERATE
%% Optimized for Modular RBAC and Offline Sync
erDiagram
    %% Modular Permission Convention: {module}:{action}
    %% Example: 'inventory:read', 'kasir:write', 'settings:delete'

    users {
        UUID id PK
        VARCHAR name
        VARCHAR email
        VARCHAR password_hash
        BOOLEAN is_active
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
        TIMESTAMPTZ deleted_at
    }
    stores {
        UUID id PK
        VARCHAR name
        TEXT address
        VARCHAR phone
        VARCHAR tax_number
        CHAR currency
        BOOLEAN is_active
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
        TIMESTAMPTZ deleted_at
        VARCHAR store_type
        NUMERIC default_tax_percentage
        NUMERIC loyalty_points_per_rupiah
        NUMERIC loyalty_rupiah_per_point
    }
    roles {
        UUID id PK
        VARCHAR name
        TEXT description
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }
    permissions {
        UUID id PK
        VARCHAR name
        TEXT description
    }
    role_permissions {
        UUID role_id FK
        UUID permission_id FK
    }
    user_stores {
        UUID id PK
        UUID user_id FK
        UUID store_id FK
        UUID role_id FK
        BOOLEAN is_active
        TIMESTAMPTZ created_at
    }
    refresh_tokens {
        UUID id PK
        UUID user_id FK
        VARCHAR token_hash
        TIMESTAMPTZ expires_at
        BOOLEAN revoked
        TIMESTAMPTZ created_at
    }
    categories {
        UUID id PK
        UUID store_id FK
        VARCHAR name
        UUID parent_id FK
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
        TIMESTAMPTZ deleted_at
        TIMESTAMPTZ server_updated_at
        INT sync_version
    }
    products {
        UUID id PK
        UUID store_id FK
        UUID category_id FK
        VARCHAR sku
        VARCHAR name
        TEXT description
        VARCHAR barcode
        VARCHAR unit
        NUMERIC cost_price
        NUMERIC sell_price
        NUMERIC tax_percentage
        BOOLEAN use_global_tax
        TEXT image_url
        BOOLEAN is_active
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
        TIMESTAMPTZ deleted_at
        TIMESTAMPTZ server_updated_at
        INT sync_version
    }
    stock_levels {
        UUID id PK
        UUID product_id FK
        UUID store_id FK
        NUMERIC quantity
        NUMERIC min_quantity
        TIMESTAMPTZ updated_at
        TIMESTAMPTZ server_updated_at
        INT sync_version
    }
    stock_movements {
        UUID id PK
        UUID product_id FK
        UUID store_id FK
        VARCHAR ref_type
        UUID ref_id
        NUMERIC quantity_delta
        TEXT notes
        UUID created_by FK
        TIMESTAMPTZ created_at
    }
    suppliers {
        UUID id PK
        VARCHAR name
        VARCHAR contact_name
        VARCHAR phone
        VARCHAR email
        TEXT address
        BOOLEAN is_active
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
        TIMESTAMPTZ deleted_at
    }
    purchase_orders {
        UUID id PK
        UUID store_id FK
        UUID supplier_id FK
        VARCHAR po_number
        VARCHAR status
        NUMERIC total_amount
        UUID ordered_by FK
        UUID received_by FK
        TIMESTAMPTZ ordered_at
        TIMESTAMPTZ received_at
        TEXT notes
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }
    purchase_order_items {
        UUID id PK
        UUID po_id FK
        UUID product_id FK
        NUMERIC quantity
        NUMERIC unit_cost
        NUMERIC received_qty
        NUMERIC subtotal
    }
    transactions {
        UUID id PK
        UUID store_id FK
        UUID cashier_id FK
        VARCHAR customer_name
        VARCHAR customer_phone
        NUMERIC subtotal
        NUMERIC discount_amt
        NUMERIC tax_amt
        NUMERIC total
        VARCHAR payment_method
        NUMERIC payment_amount
        NUMERIC change_amount
        VARCHAR status
        TEXT notes
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
        UUID table_id FK
        VARCHAR order_type
        UUID customer_id FK
        VARCHAR cart_discount_type
        NUMERIC cart_discount_value
        TIMESTAMPTZ server_updated_at
        INT sync_version
        NUMERIC points_redeemed
        NUMERIC points_discount
    }
    transaction_items {
        UUID id PK
        UUID transaction_id FK
        UUID product_id FK
        VARCHAR product_name
        VARCHAR sku
        NUMERIC quantity
        NUMERIC unit_price
        NUMERIC discount_pct
        NUMERIC tax_rate
        NUMERIC subtotal
        UUID menu_item_id FK
        NUMERIC cost_price
        VARCHAR status
        TIMESTAMPTZ completed_at
        NUMERIC original_price
        VARCHAR discount_type
        NUMERIC discount_value
        NUMERIC cart_discount_allocated
    }
    restaurant_tables {
        UUID id PK
        UUID store_id FK
        VARCHAR table_number
        INT capacity
        VARCHAR status
        TEXT notes
        BOOLEAN is_active
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
        TIMESTAMPTZ deleted_at
    }
    menu_items {
        UUID id PK
        UUID store_id FK
        UUID category_id FK
        VARCHAR name
        TEXT description
        NUMERIC sell_price
        NUMERIC tax_percentage
        BOOLEAN use_global_tax
        NUMERIC packaging_cost
        NUMERIC overhead_cost
        NUMERIC labor_cost
        TEXT image_url
        BOOLEAN is_active
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
        TIMESTAMPTZ deleted_at
    }
    menu_item_ingredients {
        UUID id PK
        UUID menu_item_id FK
        UUID product_id FK
        NUMERIC quantity
    }
    price_history {
        UUID id PK
        UUID product_id FK
        UUID store_id FK
        UUID changed_by FK
        NUMERIC old_cost
        NUMERIC new_cost
        NUMERIC old_sell
        NUMERIC new_sell
        VARCHAR source
        UUID ref_id
        TEXT notes
        TIMESTAMPTZ changed_at
    }
    po_payments {
        UUID id PK
        UUID po_id FK
        UUID store_id FK
        NUMERIC amount
        TEXT note
        UUID paid_by FK
        TIMESTAMPTZ paid_at
    }
    customers {
        UUID id PK
        UUID store_id FK
        UUID loyalty_tier_id FK
        VARCHAR name
        VARCHAR phone
        VARCHAR email
        TEXT address
        TEXT notes
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
        TIMESTAMPTZ deleted_at
        TIMESTAMPTZ server_updated_at
        INT sync_version
    }
    membership_tiers {
        UUID id PK
        VARCHAR name
        NUMERIC multiplier
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }
    loyalty_ledger {
        UUID id PK
        UUID customer_id FK
        NUMERIC points_delta
        UUID transaction_id FK
        VARCHAR type
        NUMERIC balance_snapshot
        TIMESTAMPTZ created_at
    }
    stock_batches {
        UUID id PK
        UUID product_id FK
        UUID store_id FK
        UUID po_id FK
        NUMERIC quantity_remaining
        NUMERIC purchase_price
        TIMESTAMPTZ received_at
        TIMESTAMPTZ created_at
    }
    purchase_order_termins {
        UUID id PK
        UUID po_id FK
        INT termin_number
        NUMERIC amount
        DATE due_date
        TEXT status
        TEXT notes
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }
    payment_records {
        UUID id PK
        UUID termin_id FK
        NUMERIC amount_paid
        DATE payment_date
        TEXT payment_method
        TEXT notes
        UUID recorded_by FK
        TIMESTAMPTZ created_at
    }
    expense_categories {
        UUID id PK
        VARCHAR name
        TEXT description
        BOOLEAN is_active
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
        TIMESTAMPTZ deleted_at
    }
    expenses {
        UUID id PK
        UUID store_id FK
        UUID category_id FK
        NUMERIC amount
        DATE expense_date
        TEXT notes
        UUID created_by FK
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
        VARCHAR payment_status
    }
    recurring_expenses {
        UUID id PK
        UUID store_id FK
        UUID category_id FK
        VARCHAR name
        NUMERIC amount
        VARCHAR interval
        INT interval_value
        DATE start_date
        DATE end_date
        DATE next_run_date
        TEXT notes
        BOOLEAN is_active
        UUID created_by FK
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
        TIMESTAMPTZ last_generated_at
    }
    stock_adjustments {
        UUID id PK
        UUID product_id FK
        UUID store_id FK
        adjustment_type type
        adjustment_reason reason
        NUMERIC quantity
        TEXT notes
        UUID created_by FK
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }
    stock_adjustment_batches {
        UUID id PK
        UUID adjustment_id FK
        UUID batch_id FK
        NUMERIC deducted_qty
    }
    income_categories {
        UUID id PK
        VARCHAR name
        TEXT description
        BOOLEAN is_active
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
        TIMESTAMPTZ deleted_at
    }
    incomes {
        UUID id PK
        UUID store_id FK
        UUID category_id FK
        NUMERIC amount
        DATE income_date
        VARCHAR payment_method
        VARCHAR reference
        TEXT notes
        UUID created_by FK
        TIMESTAMPTZ created_at
        TIMESTAMPTZ updated_at
    }
    activity_logs {
        UUID id PK
        UUID user_id FK
        UUID store_id FK
        action_type_enum action_type
        VARCHAR module
        UUID reference_id
        JSONB metadata
        TIMESTAMPTZ created_at
    }
    users ||--o{ user_stores : "assigned to stores"
    stores ||--o{ user_stores : "has users"
    roles ||--o{ user_stores : "assigned roles"
    users ||--o{ refresh_tokens : "has refresh tokens"
    stores ||--o{ categories : "has categories"
    categories ||--o{ categories : "has subcategories"
    stores ||--o{ products : "has products"
    categories ||--o{ products : "categorizes"
    products ||--o{ stock_levels : "has stock levels"
    stores ||--o{ stock_levels : "has stock levels"
    products ||--o{ stock_movements : "has movements"
    stores ||--o{ stock_movements : "has movements"
    users ||--o{ stock_movements : "creates movements"
    stores ||--o{ purchase_orders : "has purchase orders"
    suppliers ||--o{ purchase_orders : "supplies"
    users ||--o{ purchase_orders : "orders"
    users ||--o{ purchase_orders : "receives"
    purchase_orders ||--o{ purchase_order_items : "has items"
    products ||--o{ purchase_order_items : "ordered"
    stores ||--o{ transactions : "has transactions"
    users ||--o{ transactions : "cashiers"
    restaurant_tables ||--o{ transactions : "assigned to"
    customers ||--o{ transactions : "customers"
    transactions ||--o{ transaction_items : "has items"
    products ||--o{ transaction_items : "sold"
    menu_items ||--o{ transaction_items : "sold"
    stores ||--o{ restaurant_tables : "has tables"
    stores ||--o{ menu_items : "has menu items"
    categories ||--o{ menu_items : "categorizes"
    menu_items ||--o{ menu_item_ingredients : "has ingredients"
    products ||--o{ menu_item_ingredients : "used in"
    products ||--o{ price_history : "has price history"
    stores ||--o{ price_history : "has price history"
    users ||--o{ price_history : "changes prices"
    purchase_orders ||--o{ price_history : "references"
    purchase_orders ||--o{ po_payments : "has payments"
    stores ||--o{ po_payments : "has payments"
    users ||--o{ po_payments : "pays"
    stores ||--o{ customers : "has customers"
    products ||--o{ stock_batches : "has batches"
    stores ||--o{ stock_batches : "has batches"
    purchase_orders ||--o{ stock_batches : "received from"
    purchase_orders ||--o{ purchase_order_termins : "has termins"
    purchase_order_termins ||--o{ payment_records : "has payments"
    users ||--o{ payment_records : "records payments"
    expense_categories ||--o{ expenses : "categorizes"
    stores ||--o{ expenses : "has expenses"
    users ||--o{ expenses : "creates"
    expense_categories ||--o{ recurring_expenses : "categorizes"
    stores ||--o{ recurring_expenses : "has recurring expenses"
    users ||--o{ recurring_expenses : "creates"
    products ||--o{ stock_adjustments : "adjusted"
    stores ||--o{ stock_adjustments : "adjusted"
    users ||--o{ stock_adjustments : "creates"
    stock_adjustments ||--o{ stock_adjustment_batches : "affects batches"
    stock_batches ||--o{ stock_adjustment_batches : "affected by"
    roles ||--o{ role_permissions : "has permissions"
    permissions ||--o{ role_permissions : "assigned to roles"
    income_categories ||--o{ incomes : "categorizes"
    stores ||--o{ incomes : "has incomes"
    users ||--o{ incomes : "creates"
    users ||--o{ activity_logs : "creates"
    stores ||--o{ activity_logs : "has"
    membership_tiers ||--o{ customers : "assigned to"
    customers ||--o{ loyalty_ledger : "has ledger"
    transactions ||--o{ loyalty_ledger : "triggers"
